--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="boxs">
                 <div class="box">
                     <img class="img1" src="./img/avatar-anh-meo-cute-3.jpg" alt="">
-                    <h4>Nguyễn Gia Huy</h4>
+                    <h4>Nguyễn Ngọc Huyên</h4>
                     <div class="mutual-friend">
                         <div class="circle">
                             <img class = "img2"src="./img/avatar-anh-meo-cute-3.jpg" alt="">
@@ -69,9 +69,38 @@
                     <button class="confirm">Confirm</button>
                     <button class="delete">Delete</button>
                 </div>
+                <div class="box">
+                    <img class="img1" src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                    <h4>Nguyễn Gia Nam</h4>
+                    <div class="mutual-friend">
+                        <div class="circle">
+                            <img class = "img2"src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                        </div>
+                        <h5>19 mutual friends</h5>
+                    </div>
+                    <div></div>
+                    <button class="confirm">Confirm</button>
+                    <button class="delete">Delete</button>
+                </div>
+                <div class="box">
+                    <img class="img1" src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                    <h4>Nguyễn Gia Nam</h4>
+                    <div class="mutual-friend">
+                        <div class="circle">
+                            <img class = "img2"src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                        </div>
+                        <h5>19 mutual friends</h5>
+                    </div>
+                    <div></div>
+                    <button class="confirm">Confirm</button>
+                    <button class="delete">Delete</button>
+                </div>
             </div>
-            <div class="next">
+            <div class="next-right">
                 <div class="next-arrow"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+            <div class="next-left">
+                <div class="next-arrow"><i class="fa-solid fa-chevron-left"></i></div>
             </div>
         </div>
         <div class="footer">
@@ -82,5 +111,6 @@
     </div>
     
 </body>
-<script src="./main.js"></script>
+<script src="./main.js">
+</script>
 </html>
