--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="inform">
             <div class="boxs">
                 <div class="box">
-                    <img class="img1" src="./img/avatar-anh-meo-cute-3.jpg" alt="">
+                    <img class="img1" src="avatar-anh-meo-cute-3.jpg" alt="">
                     <h4>Nguyễn Ngọc Huyên</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/avatar-anh-meo-cute-3.jpg" alt="">
+                            <img class = "img2"src="avatar-anh-meo-cute-3.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
@@ -35,7 +35,7 @@
                     <h4>Nguyễn Gia Nam</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                            <img class = "img2"src="avatar-anh-meo-cute-4.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
@@ -44,11 +44,11 @@
                     <button class="delete">Delete</button>
                 </div>
                 <div class="box">
-                    <img class="img1" src="./img/avatar-anh-meo-cute-5.jpg" alt="">
+                    <img class="img1" src="avatar-anh-meo-cute-5.jpg" alt="">
                     <h4>Nguyễn Gia Tuan</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/avatar-anh-meo-cute-5.jpg" alt="">
+                            <img class = "img2"src="avatar-anh-meo-cute-5.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
@@ -57,11 +57,11 @@
                     <button class="delete">Delete</button>
                 </div>
                 <div class="box">
-                    <img class="img1" src="./img/anh-meo-meme-21.jpg" alt="">
+                    <img class="img1" src="anh-meo-meme-21.jpg" alt="">
                     <h4>Nguyễn Gia Hung</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/anh-meo-meme-21.jpg" alt="">
+                            <img class = "img2"src="anh-meo-meme-21.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
@@ -70,11 +70,11 @@
                     <button class="delete">Delete</button>
                 </div>
                 <div class="box">
-                    <img class="img1" src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                    <img class="img1" src="avatar-anh-meo-cute-4.jpg" alt="">
                     <h4>Nguyễn Gia Nam</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                            <img class = "img2"src="avatar-anh-meo-cute-4.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
@@ -83,11 +83,11 @@
                     <button class="delete">Delete</button>
                 </div>
                 <div class="box">
-                    <img class="img1" src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                    <img class="img1" src="avatar-anh-meo-cute-4.jpg" alt="">
                     <h4>Nguyễn Gia Nam</h4>
                     <div class="mutual-friend">
                         <div class="circle">
-                            <img class = "img2"src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                            <img class = "img2"src="avatar-anh-meo-cute-4.jpg" alt="">
                         </div>
                         <h5>19 mutual friends</h5>
                     </div>
