--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="delete">Delete</button>
                 </div>
                 <div class="box">
-                    <img class="img1" src="./img/avatar-anh-meo-cute-4.jpg" alt="">
+                    <img class="img1" src="avatar-anh-meo-cute-4.jpg" alt="">
                     <h4>Nguyễn Gia Nam</h4>
                     <div class="mutual-friend">
                         <div class="circle">
